Fixed x overflow.

--- a/global.style.css
+++ b/global.style.css
@@ -18,6 +18,14 @@ body {
   box-sizing: border-box;
 }
 
+html,
+body,
+#__next {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 
 /* Grid */
 
